tests/samples/negative/types/cast_source_literal_overflow.ax
module cast_source_literal_overflow;

fn main() -> i32 {
  let value: u64 = cast<u64>(4294967296);
  return cast<i32>(value);
}
